--- a/theme/oaklandcustomresponsive/style/custom_navigation.css
+++ b/theme/oaklandcustomresponsive/style/custom_navigation.css
@@ -1,5 +1,5 @@
 
-.navbar-inner {
+.totaraNav_prim {
     background: #f5f5f5;
     -webkit-box-shadow: 0 1px 10px rgba(0,0,0,0.1);
     -moz-box-shadow: 0 1px 10px rgba(0,0,0,0.1);
@@ -12,25 +12,22 @@
     padding-left: 0;
 }
 
-.navbar .nav.pull-left {
+/*.totaraNav .nav.pull-left {
     float: left;
-}
+}*/
 
-div#totaramenu,
-div#custommenu  {
+div#totaramenu {
     clear:both;
     width:100%;
     margin: 0;
     padding: 0;
     z-index:1;
 }
-div#totaramenu ul,
-div#custommenu ul  {
+div#totaramenu ul {
     padding:0;
     margin:0;
 }
-div#totaramenu ul li,
-div#custommenu ul li {
+div#totaramenu ul li {
     float:left;
     font-size:1em;
     font-weight:bold;
@@ -39,19 +36,16 @@ div#custommenu ul li {
     list-style-type:none;
     border:none;
 }
-.dir-rtl div#totaramenu ul li,
-.dir-rtl div#custommenu ul li {
+.dir-rtl div#totaramenu ul li {
     float: right;
     margin: 0 0 0 1px;
 }
-div#totaramenu ul li a,
-div#custommenu ul li a {
-    display:block;
+div#totaramenu ul li a {
+    /*display:block;*/
     padding:8px 35px 7px;
 }
 
-div#totaramenu ul ul,
-div#custommenu ul ul {
+div#totaramenu ul ul {
     display:none;
     width:auto;
     min-width:200px;
@@ -60,90 +54,63 @@ div#custommenu ul ul {
     margin: 0 0 0 1px;
 }
 
-div#totaramenu ul ul li,
-div#custommenu ul ul li {
+div#totaramenu ul ul li {
     font-size:0.8em;
     float:none;
     margin:0;
 }
-.dir-rtl #totaramenu ul ul li,
-.dir-rtl #custommenu ul ul li {
+.dir-rtl #totaramenu ul ul li {
     float: none;
 }
 
-div#totaramenu ul ul li a,
-div#custommenu ul ul li a {
+div#totaramenu ul ul li a {
     padding:5px 35px;
     display: block;
 }
 
-div#totaramenu ul li:hover ul,
-div#custommenu ul li:hover ul {
+div#totaramenu ul li:hover ul {
     display:block
 }
 
 /* styling of menu states */
 
 /* primary nav - not selected */
-div#totaramenu ul li a,
-div#custommenu ul li a {
-    color: [[setting:menutextcolor]];
+div#totaramenu ul li a {
     border: 1px solid #DDD;
     border-bottom: 0px;
-    background: [[setting:menucolor]];
 }
 /* primary nav - not selected - hover */
-div#totaramenu ul li a:hover,
-div#custommenu ul li a:hover {
+div#totaramenu ul li a:hover {
     color: #333;
-    background: [[setting:hovermenucolor]];;
     text-decoration: none;
 }
-/* primary nav - selected */
-div#totaramenu ul li.selected a,
-div#custommenu ul li.selected a {
-    background: [[setting:selectedmenucolor]];
-    color: [[setting:selectedmenutextcolor]];
-}
 
-div#totaramenu ul li ul,
-div#custommenu ul li ul {
+div#totaramenu ul li ul {
     border-top: 1px solid #DDD;
 }
 
 /* secondary nav - not selected child of unselected parent */
-div#totaramenu ul li li a,
-div#custommenu ul li li a {
+div#totaramenu ul li li a {
     border: none;
     border-bottom: 1px solid #DDD;
-    color: [[setting:submenutextcolor]];
-    background: [[setting:submenucolor]];
 }
 /* secondary nav - not selected child of unselected parent - hover --F9F9F9/*/
-div#totaramenu ul li li a:hover,
-div#custommenu ul li li a:hover {
+div#totaramenu ul li li a:hover {
     color: #333;
-    background: [[setting:hoversubmenucolor]];
 }
 /* secondary nav - not selected child of selected parent */
-div#totaramenu ul li.selected li a,
-div#custommenu ul li.selected li a {
+div#totaramenu ul li.selected li a {
     color: #888;
     background: #FFF;
     border: none;
     border-bottom: 1px solid #dd212a;
 }
 /* secondary nav - not selected child of selected parent - hover */
-div#totaramenu ul li.selected li a:hover,
-div#custommenu ul li.selected li a:hover {
+div#totaramenu ul li.selected li a:hover {
     color: #333;
-    background: [[setting:hoversubmenucolor]];
 }
 /* secondary nav - selected child of selected parent */
-div#totaramenu ul li.selected li.selected a,
-div#custommenu ul li.selected li.selected a {
-    color: [[setting:selectedsubmenutextcolor]];
-    background: [[setting:selectedsubmenucolor]];
+div#totaramenu ul li.selected li.selected a {
     cursor: default;
 }
 
@@ -157,38 +124,30 @@ div#custommenu ul li.selected li.selected a {
 
 @media screen and (max-width:979px) {
     div#totaramenu ul li,
-    .dir-rtl div#totaramenu ul li,
-    div#custommenu ul li,
-    .dir-rtl div#custommenu ul li {
+    .dir-rtl div#totaramenu ul li {
         float: none;
     }
 
-    div#totaramenu > ul > li.last > a,
-    div#custommenu > ul > li.last > a {
+    div#totaramenu > ul > li.last > a {
         border-bottom: 1px solid #DDD;
     }
 
-    div#totaramenu ul ul,
-    div#custommenu ul ul {
+    div#totaramenu ul ul {
         display: block;
         position: static;
         margin: 0;
     }
 
-    div#totaramenu ul ul li a,
-    div#custommenu ul ul li a {
+    div#totaramenu ul ul li a {
         padding:5px 35px 5px 45px;
     }
 
-    div#totaramenu ul li li a,
-    div#custommenu ul li li a {
+    div#totaramenu ul li li a {
         border-left: 1px solid #DDD;
         border-right: 1px solid #DDD;
     }
 
-    div#totaramenu ul li li.last a,
-    div#custommenu ul li li.last a {
+    div#totaramenu ul li li.last a {
         border-bottom: none;
     }
 }
-
